--- a/SmartAss/SmartAss/Base.lproj/LaunchScreen.xib
+++ b/SmartAss/SmartAss/Base.lproj/LaunchScreen.xib
@@ -24,7 +24,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.43897425175209581" green="0.12314993425079175" blue="0.66161616161616155" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
                 <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
